--- a/style.css
+++ b/style.css
@@ -7,12 +7,24 @@
 .square{
     height: 40px;
     width: 40px;
+    position: relative;
 }
 .square svg{
     height: 30px;
     width: 30px;
     margin: 5px;
+    position: relative;
+    z-index: -9;
 }
+path {
+    position: relative;
+    z-index: -9;
+}
+.piece{
+    position: relative;
+    z-index: 9;
+}
+
 .beige{
     background-color: rgb(110, 110, 98);
 }
